# monolith/src/database/models/@Types/userAuth.interface.ts
@@ -3,7 +3,15 @@ export interface userAuthTypes {
   email: string;
   password: string;
   isVerified?: boolean;
+  facebookId?: string;
   googleId?: string;
+  profile?: string;
   createdAt?: Date;
   updatedAt?: Date;
+}
+
+export interface AuthUserTypeDoc extends Document {
+  username: string;
+  email: string;
+  password?: string;
 }
