# monolith/src/database/repositories/@types/auth-user.types.ts
@@ -2,7 +2,9 @@ export interface AuthCreateUserRepository {
   username: string;
   email: string;
   password?: string;
+  isVerified?: boolean;
   googleId?: string;
+  profile?: string;
 }
 export interface AuthUpdateUserRepository {
   username: string;
